<resources>
    <string name="app_name">Fooding</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Iniciar Sesion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="action_registrarse">Registrarse</string>
    <string name="action_crearReceta">Crear receta</string>
    <string name="error_invalid_email">Correo Invalido</string>
    <string name="error_invalid_password">Password demasiado corta</string>
    <string name="error_incorrect_password">Password incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="nombre_receta">Nombre receta</string>
    <string name="tipo">Tipo Receta</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="elaboracion">Elaboración</string>
    <string name="comensales">Comensales</string>
    <string name="cantidad">Cant</string>
    <string name="unidades">Uds</string>
</resources>
