<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:id="@+id/registroId">

    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/nombreReceta" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/nombre_receta"
                android:imeActionId="@+id/login"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/FiltroTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Añadir tipo: "
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTipoReceta"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/FiltroIng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Añadir ingredientes: "
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id = "@+id/layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/cant" android:layout_width="54dp"
                    android:layout_height="wrap_content" android:hint="@string/cantidad"
                    android:imeActionId="@+id/login"
                    android:maxLines="1" android:singleLine="true" />

                <EditText android:id="@+id/uds" android:layout_width="54dp"
                    android:layout_height="wrap_content" android:hint="@string/unidades"
                    android:imeActionId="@+id/login"
                    android:maxLines="1" android:singleLine="true" />

                <Spinner
                    android:id="@+id/TextoIng"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent" />
            </LinearLayout>



            <LinearLayout
                android:id = "@+id/layout2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText android:id="@+id/cant2" android:layout_width="54dp"
                    android:layout_height="wrap_content" android:hint="@string/nombre_receta"
                    android:imeActionId="@+id/login"
                    android:maxLines="1" android:singleLine="true" />

                <EditText android:id="@+id/uds2" android:layout_width="54dp"
                    android:layout_height="wrap_content" android:hint="@string/nombre_receta"
                    android:imeActionId="@+id/login"
                    android:maxLines="1" android:singleLine="true" />

                <Spinner
                    android:id="@+id/TextoIng2"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:id = "@+id/layout3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText android:id="@+id/cant3" android:layout_width="54dp"
                    android:layout_height="wrap_content" android:hint="@string/nombre_receta"
                    android:imeActionId="@+id/login"
                    android:maxLines="1" android:singleLine="true" />

                <EditText android:id="@+id/uds3" android:layout_width="54dp"
                    android:layout_height="wrap_content" android:hint="@string/nombre_receta"
                    android:imeActionId="@+id/login"
                    android:maxLines="1" android:singleLine="true" />

                <Spinner
                    android:id="@+id/TextoIng3"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent" />
            </LinearLayout>






            <Button
                android:id="@+id/mas_ingredientes"
                android:text="Añadir Ingrediente"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@drawable/button_shape" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/elaboracion" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/elaboracion"
                android:imeActionId="@+id/login"
                android:maxLines="1" android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>



        <Button android:id="@+id/CrearRecetaButton" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:text="@string/action_crearReceta"
            android:textStyle="bold" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Introduzca receta"
        android:id="@+id/textView3"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
